--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,32 +2,24 @@
 <layout>
     <data></data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
-        <Button
-            android:id="@+id/btn"
-            android:textSize="20sp"
-            android:text="click"
-            android:layout_centerInParent="true"
-            android:layout_width="230dp"
-            android:layout_height="90dp"/>
-
         <TextView
-            android:id="@+id/tv"
-            android:textSize="30sp"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
+            android:id="@+id/tv5"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:padding="20dp"
+            android:text="click"
+            android:background="@color/purple_200"
             android:textColor="@color/black"
-            android:layout_below="@+id/btn"
+            android:layout_centerInParent="true"
+            android:textSize="30sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            />
+            android:layout_height="wrap_content"/>
 
     </RelativeLayout>
 </layout>
